[tool.poetry]
name = "yt2text"
version = "0.1.0"
description = "YouTube  audio to text extraction"
authors = ["Pacharapol Withayasakpunt <polv@polv.cc>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
youtube_dl = "^2021.6.6"
SpeechRecognition = "^3.8.1"
pydub = "^0.25.1"
pocketsphinx = "^0.1.15"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
